--- a/src/CSS/LandingPage.css
+++ b/src/CSS/LandingPage.css
@@ -689,6 +689,27 @@ tr[row-id="1"] .charter .bi-file-earmark-check{
   margin-right: 15px;
 }
 
+.prev-btn,
+.next-btn {
+    position: absolute;
+    top: 60%;
+    z-index: 10;
+    padding: 5px;
+    border-radius: 50%;
+    font-size: 20px;
+    width: 38px;
+    height: 38px;
+}
+
+.prev-btn {
+  left: 20px;
+}
+
+.next-btn {
+  right: 20px;
+}
+
+
 /* New Sidebar Slide CSS End */
 
 .project_info_modal .modal-content{
